# manoeuvre-kings

./: CMakeLists.txt  README.md
assets/: engine_sound.flac  engine_sound.sfxr  engine_sound_cut.flac  hit_sound.flac  hit_sound.sfxr  target.flac  target.sfxr
include/: Level.hpp  Sounds.hpp  Utils.hpp  Vehicle.hpp
src/: Level.cpp  Sounds.cpp  Utils.cpp  Vehicle.cpp  main.cpp
